# Markie--A-Fiducial-Input-Device

./: .gitignore  LICENSE  README.md
Cpp__fiducial_object/: CMakeLists.txt  CMakeLists.txt.user.89dac47  EXECUTIONS.md  config.cmake.in
Cpp__fiducial_object/DATA/COMPLETE/Dodecahedron/: markerSize.md
Cpp__fiducial_object/DATA/COMPLETE/Dodecahedron/Map/: output.yml
Cpp__fiducial_object/DATA/COMPLETE/Dodecahedron/Map/input/: cameraCalibration.yml
Cpp__fiducial_object/DATA/COMPLETE/Dodecahedron/Markers/: run.md
Cpp__fiducial_object/DATA/For_UTILS/: executions_mapperObject.md  executions_processPose.md  executions_simpleProcessing.md
Cpp__fiducial_object/DATA/For_UTILS/Cube/: 10_2_Cube.avi  FObject.yml  cameraCalibration.yml  config.yml  info.md  map.yml
Cpp__fiducial_object/DATA/For_UTILS/Cube/Scales/: 9_2_Cube.avi  cameraCalibration.yml
Cpp__fiducial_object/DATA/For_UTILS/Dodec/: cameraCalibration.yml  config.yml  map.yml
Cpp__fiducial_object/DATA/For_UTILS/Prism/: 10_4_Prism.avi  FObject.yml  cameraCalibration.yml  configHexagons.yml  configRectangles.yml  map.yml
Cpp__fiducial_object/DATA/For_UTILS/RhombicDodecahedronMap/: cameraparams.yml  config.yml
Cpp__fiducial_object/DATA/big_dodec_calib/calib/: cameraCalibration.yml  fset.fset  mapper_from_images  out-cam.yml  out.pcd  out.yml
Cpp__fiducial_object/qt/: CMakeLists.txt  aruco_nano.h  arucocalibrate.cpp  arucocalibrate.h  drawers3d.h  fiducialobjectqt.cpp  fiducialobjectqt.h  fiducialobjectqt.ui  fobject.qrc  installer_script.iss  installer_script.iss.in  main.cpp
Cpp__fiducial_object/qt/tools/qtgl/: CMakeLists.txt  glviewer.cpp  glviewer.h  glviewerscene.cpp  glviewerscene.h  object.h  viewpoint.cpp  viewpoint.h
Cpp__fiducial_object/src/: CMakeLists.txt  fiducialObject.cpp  fiducialObject.h  fiducialobject_exports.h
Cpp__fiducial_object/src/polyhuco/: levmarq.h  polyhuco.cpp  polyhuco.h  polyhucoDrawingFunctions.cpp  polyhucoPoseFunctions.cpp  polyhucoPoseFunctions.hpp
Cpp__fiducial_object/src/utils/: colors.hpp  corners3D.cpp  frameDetector.cpp  frameDetector.hpp  generalMarker.cpp  generalMarker.hpp  generalMarkerDetector.cpp  generalMarkerDetector.hpp  mapProcessor.cpp  mapProcessor.hpp  utils.cpp  utils.hpp
Cpp__fiducial_object/src/utils/markerDetectors/: cucomarkerMarkerDetector.hpp
Cpp__fiducial_object/utils/: CMakeLists.txt  fobject_process.cpp
Cpp__fiducial_object/utils/utils/: utils.cpp
Cpp__fiducial_object/utils_developer/: CMakeLists.txt
Cpp__fiducial_object/utils_developer/detectionTest/: detectionTest.cpp
Cpp__fiducial_object/utils_developer/generateConfig/: generateConfig.cpp  readme.md
Cpp__fiducial_object/utils_developer/inputDevice/: colors.hpp  inputDevice.cpp  websockectclient.cpp
Cpp__fiducial_object/utils_developer/mapperObject/: mapperObject.cpp  sglviewer.h
Cpp__fiducial_object/utils_developer/processPose/: Examples.md  processPose.cpp
Cpp__fiducial_object/utils_developer/utils/: utils.cpp  utils.hpp
Godot__Markie/: animated_sprite_2d.gd  cover.png.import  cursor.png.import  icon.svg.import  item.gd  main.tscn  process.gd  project.godot  rightCorner.png.import  title_bar.gd  whiteBorder.png.import
Godot__Markie/Audios/EN/: changing_language_EN.mp3.import  changing_scene_EN.mp3.import  greetings_EN.mp3.import  moving_further_EN.mp3.import  moving_nearer_EN.mp3.import  turning_down_EN.mp3.import  turning_left_EN.mp3.import  turning_right_EN.mp3.import  turning_up_EN.mp3.import
Godot__Markie/Audios/ES/: changing_language_ES.mp3.import  changing_scene_ES.mp3.import  greetings_ES.mp3.import  moving_further_ES.mp3.import  moving_nearer_ES.mp3.import  turning_down_ES.mp3.import  turning_left_ES.mp3.import  turning_right_ES.mp3.import  turning_up_ES.mp3.import
Godot__Markie/Audios/IT/: changing_language_IT.mp3.import  changing_scene_IT.mp3.import  greetings_IT.mp3.import  moving_further_IT.mp3.import  moving_nearer_IT.mp3.import  turning_down_IT.mp3.import  turning_left_IT.mp3.import  turning_right_IT.mp3.import  turning_up_IT.mp3.import
Godot__Markie/Audios/TR/: changing_language_TR.mp3.import  changing_scene_TR.mp3.import  greetings_TR.mp3.import  moving_further_TR.mp3.import  moving_nearer_TR.mp3.import  turning_down_TR.mp3.import  turning_left_TR.mp3.import  turning_right_TR.mp3.import  turning_up_TR.mp3.import
Godot__Markie/Buttons/: amplify.svg.import  buttonsBlack.svg.import  greenButton_focus.svg.import  redButton.svg.import  redButton_focus.svg.import  yellowButton.svg.import  yellowButton_focus.svg.import
Godot__Markie/Covers/: cover_EN.png.import  cover_ES.png.import  cover_IT.png.import  cover_TR.png.import
Godot__Markie/LangTags/: langtag_EN.png.import  langtag_ES.png.import  langtag_IT.png.import  langtag_TR.png.import
Godot__Markie/Markie/: corner.svg.import  eye.png.import  eye.svg.import  eyes.png.import  rightCorner.svg.import
Godot__Markie/Markie/eyeLooksDown/: 0001-0200.mkv0001.png.import  0001-0200.mkv0002.png.import  0001-0200.mkv0003.png.import  0001-0200.mkv0004.png.import  0001-0200.mkv0005.png.import  0001-0200.mkv0006.png.import  0001-0200.mkv0007.png.import  0001-0200.mkv0008.png.import  0001-0200.mkv0009.png.import  0001-0200.mkv0010.png.import  0001-0200.mkv0011.png.import  0001-0200.mkv0012.png.import  0001-0200.mkv0013.png.import  0001-0200.mkv0014.png.import  0001-0200.mkv0015.png.import  0001-0200.mkv0016.png.import  0001-0200.mkv0017.png.import  0001-0200.mkv0018.png.import  0001-0200.mkv0019.png.import  0001-0200.mkv0020.png.import  0001-0200.mkv0021.png.import  0001-0200.mkv0022.png.import  0001-0200.mkv0023.png.import  0001-0200.mkv0024.png.import  0001-0200.mkv0025.png.import  0001-0200.mkv0026.png.import  0001-0200.mkv0027.png.import  0001-0200.mkv0028.png.import  0001-0200.mkv0029.png.import  0001-0200.mkv0030.png.import  0001-0200.mkv0031.png.import  0001-0200.mkv0032.png.import  0001-0200.mkv0033.png.import  0001-0200.mkv0034.png.import  0001-0200.mkv0035.png.import  0001-0200.mkv0036.png.import  (+114 more)
Godot__Markie/textbox/: ComicNeue-Regular.ttf.import  textBox.png.import  text_box.gd  text_box.tscn
(+767 files in other folders)
